gateway/all/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.k8s.lan"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.k8s.lan"
