gateway/all/httproute-k8s-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "kubernetes-dashboard.k8s.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: kubernetes-dashboard
      port: 80
